--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <meta http-equiv="refresh" content="0; URL='https://dwarf.pro/latin/notes'" />
+        
 <title>ethen</title>
 <link rel="icon" href="https://66.media.tumblr.com/avatar_434a28f72e96_128.pnj" type="image/pnj">
 </head>
 <body>
+        <a href="https://dwarf.pro/latin/notes.md">Semester 1</a>
+        <a href="https://dwarf.pro/latin/notes2.md">Semester 2</a>
 </body>
 </html>
