--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>ethen</title>
 <link rel="icon" href="https://66.media.tumblr.com/avatar_434a28f72e96_128.pnj" type="image/pnj">
 </head>
-<body style="background-color:rgb(153, 221, 229);">
+<body style="background-color:rgb(119,157,202);">
         <center>
         <a href="https://dwarf.pro/latin/notes.md">Semester 1</a>
         <a href="https://dwarf.pro/latin/notes2.md">Semester 2</a>
