--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <link rel="icon" href="https://66.media.tumblr.com/avatar_434a28f72e96_128.pnj" type="image/pnj">
 </head>
 <body style="background-color:rgb(119,157,202);">
-        <center>
-        <a href="https://dwarf.pro/latin/notes.md">Semester 1</a>
-        <a href="https://dwarf.pro/latin/notes2.md">Semester 2</a>
-        </center>
+        <center><p>
+        <a href="https://dwarf.pro/latin/notes">Semester 1</a>
+        <a href="https://dwarf.pro/latin/notes2">Semester 2</a>
+        </center></p>
 </body>
 </html>
