--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+        <style>
+        p {
+  font-family: 'Amatic SC', cursive; font-size:2vw; margin-left:0 3%; margin-right:0 3%;
+}
+        </style>
 <title>ethen</title>
 <link rel="icon" href="https://66.media.tumblr.com/avatar_434a28f72e96_128.pnj" type="image/pnj">
 </head>
