--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <style>
         p {
-  font-family: 'Amatic SC', cursive; font-size:2vw; margin-left:0 3%; margin-right:0 3%;
+   font-size:2vw; margin-left:0 3%; margin-right:0 3%;
 }
         </style>
 <title>ethen</title>
