--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
         p {
    font-size:2vw; margin-left:0 3%; margin-right:0 3%;
 }
+h1 {
+   font-size:2vw; margin-left:0 3%; margin-right:0 3%;
+}
         </style>
 <title>ethen</title>
 <link rel="icon" href="https://66.media.tumblr.com/avatar_434a28f72e96_128.pnj" type="image/pnj">
 </head>
 <body style="background-color:rgb(119,157,202);">
-        <center><p>
+        <center>
+                <h1>Latin</h1>
+                <p>
         <a href="https://dwarf.pro/latin/notes">Semester 1</a>
         <a href="https://dwarf.pro/latin/notes2">Semester 2</a>
         </center></p>
